FlushIt/FlushIt/app/src/main/java/com/example/flushit/errors/OtherError.kt
package com.example.flushit.errors

class OtherError : CustomError() {
    override var message: String = "Något fel har inträffat"

    override fun displayError() = message
}